Make worker-wrapper transformation optional.
The -fworker-wrapper option enables the worker-wrapper transforma-
tion. It is implied by -O.

--- a/docs/users_guide/7.12.1-notes.rst
+++ b/docs/users_guide/7.12.1-notes.rst
@@ -102,6 +102,9 @@ Compiler
    ``-fcpr-off`` is now removed, run with ``-fno-cpr-anal`` to get the
    old ``-fcpr-off`` behaviour.
 
+-  Added the option ``-fworker-wrapper``. When enabled, the worker-wrapper
+   transformation is performed. It is implied by ``-O``.
+
 GHCi
 ~~~~
 
