-fstrictness implies -fworker-wrapper

--- a/docs/users_guide/7.12.1-notes.rst
+++ b/docs/users_guide/7.12.1-notes.rst
@@ -103,7 +103,8 @@ Compiler
    old ``-fcpr-off`` behaviour.
 
 -  Added the option ``-fworker-wrapper``. When enabled, the worker-wrapper
-   transformation is performed. It is implied by ``-O``.
+   transformation is performed. It is implied by ``-O`` and by 
+   ``-fstrictness``.
 
 GHCi
 ~~~~
