--- a/docs/users_guide/7.12.1-notes.rst
+++ b/docs/users_guide/7.12.1-notes.rst
@@ -103,8 +103,10 @@ Compiler
    old ``-fcpr-off`` behaviour.
 
 -  Added the option ``-fworker-wrapper``. When enabled, the worker-wrapper
-   transformation is performed. It is implied by ``-O`` and by 
-   ``-fstrictness``.
+   transformation is performed after a strictness analysis pass. It is implied 
+   by ``-O`` and by ``-fstrictness``. It is disabled by ``-fno-strictness``.
+   Enabling ``-fworker-wrapper`` while strictness analysis is disabled (by 
+   ``-fno-strictness``) has no effect.
 
 GHCi
 ~~~~
